prepare to break everything with symmetry rework

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,28 +1,31 @@
 [item-name]
-greeble=Tile Planner
+greeble=Greeble
 greeble-non-buildable-tile=what
 
 [item-description]
 greeble=Left click drag to select tiles, right click drag an area to make a nice pattern out of them.
 
 [shortcut-name]
-give-greeble=Tile Planner
+give-greeble=Greeble
 
 [tile-name]
 greeble-non-buildable-tile=what
 
 [mod-setting-name]
-spread-tiles=Spread tiles
-overlap-tiles=Overlap tiles
-include-rotated-tiles=Include rotations
-skip-intermediate-tiles=Skip intermediate
-grid-size=Grid size
-chunk-size=Chunk size
-attempts-limit=Attempts limit
-tile-size=Tile size
-attempts-per-tick=Attempts per tick
-avoid-buildings=Avoid buildings
-outline-buildings=Outline buildings
+import-include-rotated-tiles=Include rotations
+import-skip-intermediate-tiles=Skip intermediate
+import-tile-size=Tile size
 import-as-tiles=Import as tiles
-include-mirrored-tiles=Include mirrored tiles
-preserve-existing-tiles=Preserve existing tiles
+import-include-reflected-tiles=Include mirrored tiles
+
+wfc-symmetry-vertical=Vertical symmetry
+wfc-symmetry-horizontal=Horizontal symmetry
+wfc-chunk-size=Chunk size
+wfc-solve-attempts-limit=Attempts limit
+wfc-solve-attempts-per-tick=Attempts per tick
+
+render-spread-tiles=Spread tiles
+render-overlap-tiles=Overlap tiles
+render-avoid-buildings=Avoid buildings
+render-outline-buildings=Outline buildings
+render-preserve-existing-tiles=Preserve existing tiles
