--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -12,20 +12,37 @@ give-greeble=Greeble
 greeble-non-buildable-tile=what
 
 [mod-setting-name]
-import-include-rotated-tiles=Include rotations
-import-skip-intermediate-tiles=Skip intermediate
-import-tile-size=Tile size
-import-as-tiles=Import as tiles
-import-include-reflected-tiles=Include mirrored tiles
+import-include-rotated-tiles=Import: Include rotations
+import-skip-intermediate-tiles=Import: Skip intermediate
+import-tile-size=Import: Tile size
+import-remove-duplicates=Import: Remove duplicates
+import-include-reflected-tiles=Import: Include reflections
 
-wfc-symmetry-vertical=Vertical symmetry
-wfc-symmetry-horizontal=Horizontal symmetry
-wfc-chunk-size=Chunk size
-wfc-solve-attempts-limit=Attempts limit
-wfc-solve-attempts-per-tick=Attempts per tick
+wfc-symmetry-vertical=Solver: Vertical symmetry
+wfc-symmetry-horizontal=Solver: Horizontal symmetry
+wfc-chunk-size=Solver: Chunk size
+wfc-solve-attempts-limit=Solver: Attempts limit
+wfc-solve-attempts-per-tick=Solver: Attempts per tick
 
-render-spread-tiles=Spread tiles
-render-overlap-tiles=Overlap tiles
-render-avoid-buildings=Avoid buildings
-render-outline-buildings=Outline buildings
-render-preserve-existing-tiles=Preserve existing tiles
+render-spread-tiles=Render: Spread tiles
+render-overlap-tiles=Render: Overlap tiles
+render-avoid-buildings=Render: Avoid buildings
+render-outline-buildings=Render: Outline buildings
+render-preserve-existing-tiles=Render: Preserve existing tiles
+
+[mod-setting-description]
+import-include-rotated-tiles=Includes rotated version of each tile when reading a sample. More variety, easier to fill the grid 
+import-skip-intermediate-tiles=Defines how the tiles are extracted, set to TRUE for predefined tilesets. Example: take a sample of 6x3 with tile size 3. TRUE will read 2 tiles side by side (1-3 and 4-6 on X axis). FALSE will read 4 tiles (1-3, 2-4, 3-5, 4-6 on X axis) 
+import-tile-size=Tile size to use when extracting tiles from a sample
+import-remove-duplicates=Set to FALSE if you have a tileset with tiles that have same border connections but different inner structure
+import-include-reflected-tiles=Includes reflected version of each tile when reading a sample. More variety, easier to fill the grid 
+
+wfc-chunk-size=Set to lower value to improve performance
+wfc-solve-attempts-limit=Total time to look for a solution, set to higher if you use complex sample that fails often
+wfc-solve-attempts-per-tick=Set to lower value to improve performance
+
+render-spread-tiles=Place results one empty tile apart (for debug mostly)
+render-overlap-tiles=Produces more dense patterns by removing duplicated border between tiles
+render-avoid-buildings=Skip the area under buildings
+render-outline-buildings=Place flat floor under buildings
+render-preserve-existing-tiles=Whether to preserve existing tiles or override whole area
